qsk-macros/tests/fail/analyze/invalid-key-code-control-code.rs
use qsk_macros::layer;

fn main() {
    layer!(
        ModLayer: {
            F -> MEOW,
        },
    );
}
